// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applyTheme > with baseThemeId > attaches one style node containing overrides with the correct theme selector 1`] = `
".secondary-theme.secondary-theme:not(#\\9){
	--black-css:purple;
	--grey-css:grey;
	--brown-css:black;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.secondary-theme.secondary-theme .navigation:not(#\\9),.navigation.navigation.secondary-theme:not(#\\9){
	--shadow-css:pink;
}
@media not print {.dark.dark.secondary-theme .navigation:not(#\\9),.dark.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:var(--grey-css);
	--buttonShadow-css:green;
}}"
`;

exports[`applyTheme > with secondary theme > attaches one style node containing override 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`applyTheme > with targetDocument > attaches one style node containing override on the target document 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`applyTheme > without secondary theme > attaches one style node containing override 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`generateThemeStylesheet > with baseThemeId > creates override styles 1`] = `
".secondary-theme.secondary-theme:not(#\\9){
	--black-css:purple;
	--grey-css:grey;
	--brown-css:black;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.secondary-theme.secondary-theme .navigation:not(#\\9),.navigation.navigation.secondary-theme:not(#\\9){
	--shadow-css:pink;
}
@media not print {.dark.dark.secondary-theme .navigation:not(#\\9),.dark.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:var(--grey-css);
	--buttonShadow-css:green;
}}"
`;

exports[`generateThemeStylesheet > with reference tokens > creates override styles with CSS variables 1`] = `
"body:not(#\\9){
	--colorPrimary600-css:#ff6600;
	--colorPrimary700-css:#692dc9;
}"
`;

exports[`generateThemeStylesheet > with secondary theme > creates override styles 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`generateThemeStylesheet > with selector (scoped theming) > creates scoped override styles 1`] = `
".my-scope{
	--fontFamilyBase-css:"Helvetica Neue", Arial, sans-serif;
	--fontFamilyBody-css:var(--fontFamilyBase-css);
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:var(--shadow-css);
	--lineShadow-css:var(--buttonShadow-css);
	--small-css:1px;
	--medium-css:3px;
	--scaledSize-css:var(--medium-css);
	--appear-css:20ms;
	--containerShadowBase-css:2px 3px orange, -1px 0 8px olive;
	--modalShadowContainer-css:var(--containerShadowBase-css);
}
.compact.my-scope{
	--scaledSize-css:var(--small-css);
}
@media not print {.dark.my-scope{
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}
.disabled-motion.my-scope{
	--appear-css:0;
}
.my-scope .navigation,.my-scope.navigation{
	--shadow-css:pink;
	--boxShadow-css:purple;
}"
`;

exports[`generateThemeStylesheet > without secondary theme > creates override styles 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;
